Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123178

SVG rendering of strokes with stroke-dasharray="0" renders no line instead of a solid line

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.0 FF
    • 6.5.2
    • SVG Support
    • None
    • Windows and Linux platforms
    • Windows
    • 3ca87bcb8 (dev)

    Description

      Rendering of SVG strokes with stroke-dasharray value of zero do not show as expected in SVG viewer example app included with Qt Creator when compared to Microsoft Edge, Chrome or Inkscape.  Zero should render a solid line but no line is drawn.

      See attached images and sample SVG that produces the issue.

      qtcreator-app.png shows how it looks in Qt.  Chrome.png shows how it should look.

      Attachments

        1. Chrome.png
          Chrome.png
          0.5 kB
        2. dasharray 1.svg
          0.4 kB
        3. qtcreator-app.png
          qtcreator-app.png
          26 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.graphics.and.multimedia Qt Graphics Team
            radave David Adair
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes