Draw solid line if all elements in stroke-dasharray are zero

Rendering a line with stroke-dasharray that only contains zeroes as
elements produces a solid line in modern browsers, whereas QtSvg does
not draw a line at all. An additional check whether all elements in
stroke-dasharray are zero was added and in this case the line is forced
to be drawn solid

Fixes: QTBUG-123178
Change-Id: I5c00aaf49f887dc31cec4770010fba0c23e2e872
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>